--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "oomami",
   "version": "0.0.1",
   "dependencies": {
-    "bcrypt": "^0.8.5",
-    "body-parser": "^1.14.0",
-    "express": "^4.13.3",
-    "jwt-simple": "^0.3.1",
-    "mysql": "^2.9.0"
+    "bcrypt": "0.8.5",
+    "body-parser": "1.14.0",
+    "express": "4.13.3",
+    "jwt-simple": "0.3.1",
+    "mysql": "2.9.0"
   }
 }
