--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "bcrypt": "0.8.5",
     "body-parser": "1.14.0",
     "express": "4.13.3",
+    "fs": "0.0.2",
     "jwt-simple": "0.3.1",
+    "morgan": "1.6.1",
     "mysql": "2.9.0"
   }
 }
