--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fs": "0.0.2",
     "jwt-simple": "0.3.1",
     "morgan": "1.6.1",
-    "mysql": "2.9.0"
+    "mysql": "2.9.0",
+    "redis": "2.1.0"
   }
 }
